--- a/HealthClub/templates/physio-slim/profile.html
+++ b/HealthClub/templates/physio-slim/profile.html
@@ -9,14 +9,14 @@
 {% block body %}
 <div class="row d-flex justify-content-center align-items-center">
     <div class="col-7 d-flex justify-content-center align-items-center">
-        <form method="POST" action=""> {% csrf_token %}
+        <form method="POST" action="" enctype="multipart/form-data"> {% csrf_token %}
         <div class="row px-2">
             <h1 class="text-uppercase">Edit Profile</h1>
             <p>
                 <div class="file-field">
                     <div class=" d-flex flex-column  align-items-center">
                         <img src="{{MEDIA_URL}}/{{request.user.avatar}}"
-                            class="rounded-circle avatar-pic" id='avatar' style=" object-fit: cover;
+                            class="rounded-circle avatar-pic" id='editPhoto' style=" object-fit: cover;
                             width:150px;
                             height:150px;" alt="avatar">
                         <label for="file-upload" class="custom-file-upload mt-3">
@@ -26,8 +26,7 @@
                             accept="image/*" />
                     </div>
                 </div>
-
-                </p>
+            </p>
             <div class="inset col-6" id="first">
                     <p>
                         <label>Username</label>
@@ -41,17 +40,21 @@
                         <label>Phone</label>
                         <input type="tel" name="phone" placeholder="Enter phone..." required value="{{request.user.phone}}">
                     </p>
-                </div>
-                <div class="inset col-6" id="second" >
-                    <p>
-                        <label>Age</label>
-                        <input type="number" name="age" placeholder="Enter age..." required min="1"value="{{request.user.age}}" >
-                    </p>
-                    <p>
-                        <label for="id_membership_num">membership No.(optional):</label>
-                        <input type="text" name="membership_num" placeholder="Enter membership number" {% if requset.user.membership_num %}value="{{request.user.membership_num}}"{% endif %}>
-                    </p>
-                    {% if form.errors %}
+            </div>
+            <div class="inset col-6" id="second" >
+                <p>
+                    <label>Age</label>
+                    <input type="number" name="age" placeholder="Enter age..." required min="1"value="{{request.user.age}}" >
+                </p>
+                <p>
+                    <label for="id_membership_num">membership No.(optional):</label>
+                    <input type="text" name="membership_num" placeholder="Enter membership number" {% if requset.user.membership_num %}value="{{request.user.membership_num}}"{% endif %}>
+                </p>
+                
+
+            </div>
+            <div class="px-5">
+                {% if form.errors %}
                         {% for field in form %}
                             {% for error in field.errors %}
                             <div class="text-danger">
@@ -60,13 +63,12 @@
                             {% endfor %}
                         {% endfor %}
                     {% endif %}
-
-                </div>
+            </div>
 
               
-                    <p class="p-container">
-                        <input class="submit" id="submit" type="submit" value="Edit" >
-                    </p>                
+            <p class="p-container">
+                <input class="submit" id="submit" type="submit" value="Edit" >
+            </p>                
      
 
         </div>
@@ -80,16 +82,14 @@
 
 <script>
     function changeAvatar() {
-        var img = document.getElementById("avatar")
+        var img = document.getElementById("editPhoto")
         var avatar = document.getElementById("file-upload")
-        console.log(img.src)
-
         img.src = URL.createObjectURL(avatar.files[0])
-        console.log(img.src)
-
 
     }
+
 </script>
+
 
 
 </body>
