--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -110,15 +110,15 @@
 										<ul class="dropdown">
 											{% if request.user.is_superuser %}
 												<li><a href="/admin/" target="_blank">Manage site </a></li>
-												<li><a href="{% url 'profile' request.user.id %}">Edit Profile</a></li>
+												<li><a href="{% url 'profile' %}">Edit Profile</a></li>
 												<li><a href="{% url 'logout' %}">Logout</a></li>
 											{% else %}
 												{% if request.user.is_subscribed %}
 												<li><a href="{% url 'favorite-classes'%}">Favorites</a></li>
-												<li><a href="{% url 'profile' request.user.id %}">Edit Profile</a></li>
+												<li><a href="{% url 'profile' %}">Edit Profile</a></li>
 												<li><a href="{% url 'logout' %}">Logout</a></li>
 												{% else %}
-												<li><a href="{% url 'profile' request.user.id %}">Edit Profile</a></li>
+												<li><a href="{% url 'profile' %}">Edit Profile</a></li>
 												<li><a href="{% url 'logout' %}">Logout</a></li>
 												{% endif %}
 											{% endif %}
