--- a/HealthClub/templates/physio-slim/register.html
+++ b/HealthClub/templates/physio-slim/register.html
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-7 d-flex justify-content-center align-items-center">
         <div class="col-8">
-            <form method="POST" action=""> {% csrf_token %}
+            <form method="POST" action="" enctype="multipart/form-data"> {% csrf_token %}
                 <h1>REGISTER</h1>
                 <div class="inset " id="first">
                     <p>
@@ -55,7 +55,7 @@
 
                     <div class="file-field">
                         <div class="mb-4 d-flex flex-column  align-items-center">
-                            <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+                            <img src="{% static 'profile/default.jpg' %}"
                                 class="rounded-circle avatar-pic" id='avatar' style=" object-fit: cover;
                                 width:150px;
                                 height:150px;" alt="avatar">
