--- a/HealthClub/templates/physio-slim/contact.html
+++ b/HealthClub/templates/physio-slim/contact.html
@@ -34,6 +34,15 @@
 					</div>
 				</div>
 				{% endfor %}
+				<div class="col-md-4 col-md-push-1 animate-box">
+					<div class="fh5co-contact-info" style="padding-top: 10%;">
+						<h4> Email us </h4>
+						<ul>
+							<li dir="rtl" lang="ar"> Physio.slim2@gmail.com <i class="fa-solid fa-envelope"></i> </li>
+
+						</ul>
+					</div>
+				</div>
 				<!-- end contact form -->
 
 			</div>
