--- a/HealthClub/PhysioSlim/static/css/login.css
+++ b/HealthClub/PhysioSlim/static/css/login.css
@@ -122,3 +122,17 @@ input[type="file"] {
    inset 0 1px 0 rgba(255,255,255,0.3),
    inset 0 -10px 10px rgba(255,255,255,0.1) !important;
 }
+
+/* to remove input number arrows */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
