--- a/HealthClub/templates/physio-slim/event.html
+++ b/HealthClub/templates/physio-slim/event.html
@@ -3,10 +3,10 @@
 {% block body %}
 	
 	<div id="fh5co-gallery">
-		<div class="container">
+		<div class="container">    
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h2>Gym  Events </h2>
+                        <h2> Our Event </h2>
                     </div>
                 </div>
              {% for event in events %}
