--- a/HealthClub/templates/physio-slim/Events.html
+++ b/HealthClub/templates/physio-slim/Events.html
@@ -6,22 +6,23 @@
 		<div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h2>Gym  Events </h2>
+                        <h2>Gym Events </h2>
                     </div>
                 </div>
              {% for event in events %}
-                <div class="row g-0 my-5">
-                  <div class="col-md-6  " >
-                    <img src="{{MEDIA_URL}}/{{event.photo}}"  style="height: fit-content;  align-items: center;" class="img-fluid rounded-start" alt="...">
-                  </div>
-                  <div class="col-md-6 ">
+                <div class="row g-0 my-4">
+                  <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box ">
                     <div class="card-body">
                       <h3 class="card-title"> {{ event.event }}</h3>
                       <p class="card-text">{{event.description}}.</p>
-                      <h5>{{event.created_on}}</h5>
-                      <h5>{{event.due|timeuntil}}</h5>
+                      <!-- <p class="card-text">{{event.created_on}}</p> -->
+                      <p class="card-text">This Event is valid for <span class="card-text" style="color: #fde303; font-size: 30px;"> {{event.due|timeuntil}} </span> from now !</p>
                     </div>
                   </div>
+                  <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box " >
+                    <img src="{{MEDIA_URL}}/{{event.photo}}"  style="height: 50vh;  align-items: center;" alt="...">
+                  </div>
+                 
                 </div>
               {% endfor %}
             </div>
