--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -227,7 +227,11 @@
 				</div>
 			</div>
 			{% endfor %}
-			
+			<div class="col-3">
+			<a href="{% url 'events' %}" class="btn btn-primary btn-outline btn-sm">
+				 Show More <i class="icon-arrow-right"></i>
+			  </a>
+			  </div>			
 		</div>
 		
 	</div>
