signup/login with google

--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -102,7 +102,7 @@
 									<li><a href="{% url 'login' %}">Login</a></li>
 								{% else %}
 									<li class="has-dropdown">
-										<a href="#"><img src="{{MEDIA_URL}}/{{request.user.avatar}}"
+										<a href="#"><img src="{{MEDIA_URL}}/{{request.user.picture}}"
 											class="rounded-circle avatar-pic" id='avatar' style=" object-fit: cover;
 											width:40px;
 											height:40px;" alt="avatar"></a>
