--- a/HealthClub/PhysioSlim/static/css/login.css
+++ b/HealthClub/PhysioSlim/static/css/login.css
@@ -7,7 +7,7 @@ body {
 a{
     text-decoration: none !important;
 }
-form {
+.form {
  	background:#111; 
     width:80%;
     margin:30px auto;
@@ -26,7 +26,7 @@ form {
     border-top:1px solid #19191a;
 }
 
-form h1 {
+.form h1 {
   color:#fff;
   text-align:center;
   padding:15px 0;
@@ -68,7 +68,7 @@ input[type=checkbox] {
 }
 
 .p-container {
- 	padding:0 20px 20px 20px; 
+ 	padding:0 20px; 
 }
 
 .p-container:after {
