--- a/HealthClub/templates/physio-slim/login.html
+++ b/HealthClub/templates/physio-slim/login.html
@@ -1,5 +1,7 @@
 {% extends 'physio-slim/main.html' %}
 {% load static %}
+{% load socialaccount %}
+
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/login.css' %}">
 
@@ -10,7 +12,7 @@
 
 <div class="row">
 	<div class="col-5 d-flex justify-content-center align-items-center">
-		<div class="col-10">
+		<div class="col-10 form">
 			<form method="POST" action=""> {% csrf_token %}
 				<h1>LOGIN</h1>
 				<div class="inset">
@@ -26,14 +28,18 @@
 						<p id="messages" class="text-danger">{{message}}</p>
 					{% endfor %}
 					<a href="{% url 'reset_password' %}" class="forget">Forgot password ?</a>
-
+					
 				</div>
 				
 				<p class="p-container">
 					<input class="submit" type="submit" value="Login">
 				</p>
 				</form>
-			
+				<form method="post" action="{% provider_login_url 'google' %}" class="d-flex justify-content-center align-items-center">
+					{% csrf_token %}
+					<span>Or Login with</span>
+					<button type="submit"  class="btn "><i class="fa-brands fa-google text-danger"></i></button>
+				  </form>
 		</div>
 		
 	</div>
