signup/login with google

--- a/HealthClub/templates/physio-slim/activate.html
+++ b/HealthClub/templates/physio-slim/activate.html
@@ -8,8 +8,8 @@
 
 {% block body %}
 <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-7 d-flex justify-content-center align-items-center">
-        <form method="POST" action="" enctype="multipart/form-data"> {% csrf_token %}
+    <div class="col-7 d-flex justify-content-center align-items-center ">
+        <form method="POST" action="" enctype="multipart/form-data" class="form"> {% csrf_token %}
         <div class="row px-2">
             <h1 class="text-uppercase">Complete registration</h1>
             <p>
