--- a/HealthClub/templates/physio-slim/profile.html
+++ b/HealthClub/templates/physio-slim/profile.html
@@ -9,7 +9,7 @@
 {% block body %}
 <div class="row d-flex justify-content-center align-items-center">
     <div class="col-7 d-flex justify-content-center align-items-center">
-        <form method="POST" action="" enctype="multipart/form-data"> {% csrf_token %}
+        <form method="POST" action="" enctype="multipart/form-data" class="form"> {% csrf_token %}
         <div class="row px-2">
             <h1 class="text-uppercase">Edit Profile</h1>
             <p>
