--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -216,7 +216,7 @@
 			{% for event in events %}
 			<div class="col-lg-4 col-md-4">
 				<div class="fh5co-blog animate-box">
-					<a href="{% url 'event' event.id %}"><img style="height: 40vh;" src="{{MEDIA_URL}}/{{event.photo}}" alt="Hello"></a>
+					<a href="{% url 'event' event.id %}"><img style="height: 40vh;" src="{{MEDIA_URL}}/{{event.photo}}" alt="Event"></a>
 					<div class="blog-text">
 						<h3><a href="{% url 'event' event.id %}">{{event.event}}</a></h3>
 						<span class="posted_on">Valid for {{event.due|timeuntil}} from now!</span>
