--- a/HealthClub/templates/physio-slim/events.html
+++ b/HealthClub/templates/physio-slim/events.html
@@ -28,6 +28,11 @@
             <h3>{{event.event}}</h3>
 
             <p>{{event.description}}</p>
+            
+            {% if  event.num_of_participants == none%}
+            {% else %}
+            <p>available places: {{event.num_of_participants}}</p>
+            {% endif %}
             <p><a href="{% url 'event' event.id %}" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
 
           </div>
