--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -94,8 +94,10 @@
             <div class="price-box">
               <h2 class="pricing-plan">{{offer.name}}</h2>
               <div class="price"><sup class="currency"></sup>{{offer.discount}} % 
-                <h5>  Starting from {{offer.created_on}} </h5>
-				        <h5>  Untill {{offer.due|timeuntil}} </h5>
+                <ul class="classes">
+                  <li style="color:#495057 ;">Starting from <b style="color: #fde303;" >{{offer.created_on}}</b>  </li>
+                  <li style="color:#495057 ;" >Untill <b style="color: #fde303;" >{{offer.due|timeuntil}} </b> </li>
+                </ul>
 				<small>
 					{% if offer.number_of_months is 1 %}
 					per month 
