--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -91,16 +91,17 @@
 			<div class="price-box">
 			  <h2 class="pricing-plan">{{offer.name}}</h2>
 			  <div class="price"><sup class="currency"></sup>{{offer.discount}} % 
-				<h5>  Starting from {{offer.created_on}} </h5>
-				<h5>  Untill {{offer.due|timeuntil}} </h5>
+				<ul class="classes">
+				<li style="color:#495057 ;">Starting from <b style="color: #fde303;" >{{offer.created_on}}</b>  </li>
+				<li style="color:#495057 ;" >Untill <b style="color: #fde303;" >{{offer.due|timeuntil}} </b> </li>
+				</ul>
 				<small>
 					{% if offer.number_of_months is 1 %}
-					per month 
-
-					 {% elif offer.number_of_months is 12 %}
-					 per year 
+						per month 
+					{% elif offer.number_of_months is 12 %}
+						 per year 
 					{% else %}
-					{{ offer.number_of_months }} months
+						{{ offer.number_of_months }} months
 					{% endif %}
 				</small></div>
 			  <ul class="classes">
