--- a/HealthClub/templates/physio-slim/offers.html
+++ b/HealthClub/templates/physio-slim/offers.html
@@ -36,6 +36,10 @@
 					<div class="price-box">
 						<h2 class="pricing-plan">{{offer.name}}</h2>
 						<div class="price"><sup class="currency"></sup>{{offer.discount}} %
+							<ul class="classes">
+								<li style="color:#495057 ;">Starting from <b style="color: #fde303;" >{{offer.created_on}}</b>  </li>
+								<li style="color:#495057 ;" >Untill <b style="color: #fde303;" >{{offer.due|timeuntil}} </b> </li>
+							</ul>
 							<small>
 								{% if offer.number_of_months is 1 %}
 								per month
