--- a/HealthClub/templates/physio-slim/profile.html
+++ b/HealthClub/templates/physio-slim/profile.html
@@ -45,7 +45,7 @@
             <div class="inset col-6" id="second" >
                 <p>
                     <label>Age</label>
-                    <input type="number" name="age" placeholder="Enter age..." required min="1"value="{{request.user.age}}" >
+                    <input type="date" name="age" placeholder="Enter age..." value="{{request.user.age|date:'Y-m-d'}}">
                 </p>
                 <p>
                     <label for="id_membership_num">membership No.(optional):</label>
