--- a/HealthClub/PhysioSlim/static/css/login.css
+++ b/HealthClub/PhysioSlim/static/css/login.css
@@ -8,16 +8,20 @@ a{
     text-decoration: none !important;
 }
 .form {
- 	background:#111; 
+ 
     width:80%;
-    margin:30px auto;
-    border-radius:0.4em;
-    border:1px solid #191919;
-    overflow:hidden;
-    position:relative;
-    box-shadow: 0 5px 10px 5px rgba(0,0,0,0.2);
-    font-size:1.5rem !important;
 
+
+}
+.signup, .form{
+	background:#111; 
+  margin:30px auto;
+  border-radius:0.4em;
+  border:1px solid #191919;
+  overflow:hidden;
+  position:relative;
+  box-shadow: 0 5px 10px 5px rgba(0,0,0,0.2);
+  font-size:1.5rem !important;
 }
 
 
@@ -41,14 +45,19 @@ label {
     padding-bottom:9px;
 }
 
-p input,p select{
+p input,p select, .google{
  	width:100%;
     padding:8px 5px;
-    background:linear-gradient(#1f2124, #27292c) !important;
-    border:1px solid #222;
     border-radius:0.3em;
-    margin-bottom:20px;
+    border: none;
+    /* margin-bottom:20px; */
 }
+p input:not([type=submit]), p select{
+  border:1px solid #222;
+  background: #333 !important;
+
+}
+
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -117,6 +126,7 @@ input[type="file"] {
   background:#fde403 !important;
 
 }
+
 .submit:hover {
  box-shadow:
    inset 0 1px 0 rgba(255,255,255,0.3),
