re-arranging gallery with events in the index

--- a/HealthClub/templates/physio-slim/events.html
+++ b/HealthClub/templates/physio-slim/events.html
@@ -33,7 +33,7 @@
             {% else %}
             <p>available places: {{event.num_of_participants}}</p>
             {% endif %}
-            <p><a href="{% url 'event' event.id %}" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
+            <p><a href="{% url 'event' event.id %}" class="btn btn-primary btn-outline btn-sm">Details <i class="icon-arrow-right"></i></a></p>
 
           </div>
         </div>
