--- a/HealthClub/templates/physio-slim/profile.html
+++ b/HealthClub/templates/physio-slim/profile.html
@@ -23,7 +23,7 @@
                         <label for="file-upload" class="custom-file-upload mt-3">
                             <i class="fa fa-cloud-upload"></i> Edit Photo
                         </label>
-                        <input id="file-upload" type="file" name="avatar" onchange="changeAvatar()"
+                        <input id="file-upload" type="file" name="picture" onchange="changeAvatar()"
                             accept="image/*" />
                     </div>
                 </div>
