--- a/HealthClub/templates/physio-slim/classes.html
+++ b/HealthClub/templates/physio-slim/classes.html
@@ -35,12 +35,17 @@
 					<h3> {{class.Class}}</h3>
 
 					<p>{{class.description}}</p>
+					<p>
+						<a href="{% url 'schedule' class.id %}" class="btn btn-primary btn-outline btn-sm">More <i
+							class="icon-arrow-right"></i></a>
+					  </p>
 					{% if not request.user.is_anonymous %}
 						{% if request.user.branch == branch %}
 							{% if class.id in all_subscribers %}
 							<a href="{% url 'unsubscribe-from-class' class.id %}">
 								<button class="btn btn-danger">Remove from favorites <i class="fa-regular fa-face-frown"></i></button>
 							</a>
+							
 							{% else %}
 							<a href="{% url 'subscribe-to-class' class.id %}">
 								<button class="btn btn-primary btn-outline btn-sm">Add to favorites <i class="fa-regular fa-face-smile-beam"></i></button>
