--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -93,8 +93,10 @@
             <div class="price-box">
               <h2 class="pricing-plan">{{offer.name}}</h2>
               <div class="price"><sup class="currency"></sup>{{offer.discount}} % 
-                <h5>  Starting from {{offer.created_on}} </h5>
-				        <h5>  Untill {{offer.due|timeuntil}} </h5>
+                {% if offer.due %}
+                  <h5>  Starting from {{offer.created_on}} </h5>
+                  <h5>  Untill {{offer.due|timeuntil}} </h5>
+                {% endif %}
 				<small>
 					{% if offer.number_of_months is 1 %}
 					per month 
