--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -55,7 +55,8 @@
 	<link rel="stylesheet" href="{% static 'css/bell.css' %}">
 	<!-- Modernizr JS -->
 	<script src="{% static 'js/modernizr-2.6.2.min.js' %}"></script>
-	
+	<!-- paypal -->
+	<script src="https://www.paypal.com/sdk/js?client-id=AYe3eCf7j5YDIYfiNnZfZ8DECp5xPGllm12wzLNQWcVeYLjb2fh_5p-rj0-O1rsXjrhuyM0KcoxwKw-L&currency=USD"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -63,7 +64,7 @@
 
 	{% block head %}
 	{% endblock %}
-</head>
+</head> 
 
 <body>
 	<!-- Navigation -->
