--- a/HealthClub/templates/physio-slim/schedule.html
+++ b/HealthClub/templates/physio-slim/schedule.html
@@ -1,22 +1,242 @@
-{{classes}} in {{classes.branch}}<br> <br>
-<!-- {% for day in days %}
- {{day}} : 
- {% endfor %} -->
-saturday
- {% for class in class %}
- <br>
- {% if class.day.id == 1 %}
+{% extends 'physio-slim/main.html' %} {% load static %} {% block body %}
 
- {{class.From}} : {{class.To}}
- {% endif %}
-{% endfor %}
-Sunday
-<br>
-{% for class in class %}
-{% if class.day.id == 2 %}
-  {{class.From}} : {{class.To}}<br>
+<div class="fh5co-loader"></div>
 
-{% endif %}
+<header
+  id="fh5co-header"
+  class="fh5co-cover fh5co-cover-sm"
+  role="banner"
+  style="background-image: url({% static 'images/crossfit.jpg' %})"
+  data-stellar-background-ratio="0.5"
+>
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2 text-center">
+        <div class="display-t">
+          <div class="display-tc animate-box" data-animate-effect="fadeIn">
+            <h1></h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
 
- {% endfor %}
+<div
+  id="fh5co-schedule"
+  class="fh5co-bg"
+  style="background-image: url({{MEDIA_URL}}/{{class.photo }})"
+>
+  <div class="container">
+    <div class="row">
+      <div
+        class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box"
+      >
+        <h2 style="color: black">{{classes}}</h2>
+        <p style="color: black">{{classes.branch}}</p>
+      </div>
+    </div>
 
+    <div class="row animate-box">
+      <div class="fh5co-tabs">
+        <ul class="fh5co-tab-nav">
+          <li class="active">
+            <a href="#" data-tab="1"
+              ><span class="visible-xs">S</span
+              ><span class="hidden-xs">Sunday</span></a
+            >
+          </li>
+          <li>
+            <a href="#" data-tab="2"
+              ><span class="visible-xs">M</span
+              ><span class="hidden-xs">Monday</span></a
+            >
+          </li>
+          <li>
+            <a href="#" data-tab="3"
+              ><span class="visible-xs">T</span
+              ><span class="hidden-xs">Tuesday</span></a
+            >
+          </li>
+          <li>
+            <a href="#" data-tab="4"
+              ><span class="visible-xs">W</span
+              ><span class="hidden-xs">Wednesday</span></a
+            >
+          </li>
+
+          <li>
+            <a href="#" data-tab="5"
+              ><span class="visible-xs">Th</span
+              ><span class="hidden-xs">Thursday</span></a
+            >
+          </li>
+          <li>
+            <a href="#" data-tab="6"
+              ><span class="visible-xs">F</span
+              ><span class="hidden-xs">Friday</span></a
+            >
+          </li>
+          <li>
+            <a href="#" data-tab="7"
+              ><span class="visible-xs">S</span
+              ><span class="hidden-xs">Saturday</span></a
+            >
+          </li>
+        </ul>
+
+        <!-- Tabs -->
+        <div class="fh5co-tab-content-wrap">
+          <div
+            class="fh5co-tab-content tab-content active"
+            data-tab-content="1"
+          >
+            <ul class="class-schedule">
+              {% for class in class %}
+              <li class="text-center">
+                {% if class.day.id ==  1 %}
+                <span
+                  ><img
+                    src="{% static 'images/Alarm.png' %}"
+                    class="img-responsive"
+                    alt=""
+                /></span>
+                <span class="time">{{class.From}} : {{class.To}}</span>
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+
+          <div
+            class="fh5co-tab-content tab-content active"
+            data-tab-content="2"
+          >
+            <ul class="class-schedule">
+              {% for class in class %}
+              <li class="text-center">
+                {% if class.day.id == 2 %}
+                <span
+                  ><img
+                    src="{% static 'images/Alarm.png' %}"
+                    class="img-responsive"
+                    alt=""
+                /></span>
+                <span class="time">{{class.From}} : {{class.To}}</span>
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+
+          <div
+            class="fh5co-tab-content tab-content active"
+            data-tab-content="3"
+          >
+            <ul class="class-schedule">
+              {% for class in class %}
+              <li class="text-center">
+                {% if class.day.id == 3 %}
+                <span
+                  ><img
+                    src="{% static 'images/Alarm.png' %}"
+                    class="img-responsive"
+                    alt=""
+                /></span>
+                <span class="time">{{class.From}} : {{class.To}}</span>
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+
+          <div
+            class="fh5co-tab-content tab-content active"
+            data-tab-content="4"
+          >
+            <ul class="class-schedule">
+              {% for class in class %}
+              <li class="text-center">
+                {% if class.day.id == 4 %}
+                <span
+                  ><img
+                    src="{% static 'images/Alarm.png' %}"
+                    class="img-responsive"
+                    alt=""
+                /></span>
+                <span class="time">{{class.From}} : {{class.To}}</span>
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+
+          <div
+            class="fh5co-tab-content tab-content active"
+            data-tab-content="5"
+          >
+            <ul class="class-schedule">
+              {% for class in class %}
+              <li class="text-center">
+                {% if class.day.id == 5 %}
+                <span
+                  ><img
+                    src="{% static 'images/Alarm.png' %}"
+                    class="img-responsive"
+                    alt=""
+                /></span>
+                <span class="time">{{class.From}} : {{class.To}}</span>
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+
+          <div
+            class="fh5co-tab-content tab-content active"
+            data-tab-content="6"
+          >
+            <ul class="class-schedule">
+              {% for class in class %}
+              <li class="text-center">
+                {% if class.day.id == 6 %}
+                <span
+                  ><img
+                    src="{% static 'images/Alarm.png' %}"
+                    class="img-responsive"
+                    alt=""
+                /></span>
+                <span class="time">{{class.From}} : {{class.To}}</span>
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+
+          <div
+            class="fh5co-tab-content tab-content active"
+            data-tab-content="7"
+          >
+            <ul class="class-schedule">
+              {% for class in class %}
+              <li class="text-center">
+                {% if class.day.id == 7 %}
+                <span
+                  ><img
+                    src="{% static 'images/Alarm.png' %}"
+                    class="img-responsive"
+                    alt=""
+                /></span>
+                <span class="time">{{class.From}} : {{class.To}}</span>
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
