--- a/HealthClub/templates/physio-slim/activate.html
+++ b/HealthClub/templates/physio-slim/activate.html
@@ -55,8 +55,8 @@
             </div>
             <div class="inset col-6" id="second" >
                 <p>
-                    <label>Age</label>
-                    <input type="date" name="age" placeholder="Enter age..." required min="1" value="{{form.age.value}}">
+                    <label>Birthdate</label>
+                    <input type="date" name="birth_date" placeholder="Enter your birthdate..." required min="1" value="{{form.birth_date.value}}">
                 </p>
                 <p>
                     <label for="id_membership_num">Membership No.(optional):</label>
