--- a/HealthClub/templates/physio-slim/profile.html
+++ b/HealthClub/templates/physio-slim/profile.html
@@ -44,8 +44,8 @@
             </div>
             <div class="inset col-6" id="second" >
                 <p>
-                    <label>Age</label>
-                    <input type="date" name="age" placeholder="Enter age..." value="{{request.user.age|date:'Y-m-d'}}">
+                    <label>Birthdate</label>
+                    <input type="date" name="birth_date" placeholder="Enter your birthdate..." value="{{request.user.birth_date|date:'Y-m-d'}}">
                 </p>
                 <p>
                     <label for="id_membership_num">membership No.(optional):</label>
