--- a/HealthClub/templates/physio-slim/register.html
+++ b/HealthClub/templates/physio-slim/register.html
@@ -76,7 +76,7 @@
                         </div>
                     </p>
                     <p>
-                        <input type="date" name="age" placeholder="Enter age..." required min="1" value="{{form.age.value}}">
+                        <input type="date" name="birth_date" placeholder="Enter your birthdate..." required min="1" value="{{form.birth_date.value}}">
                     </p>
                     <p>
                         <select name="gender" class="" required="" id="id_gender">
